[gd_scene load_steps=18 format=3 uid="uid://48fpkt0wst45"]

[ext_resource type="Script" path="res://Scenes/Enemy/Peasant/enemy.gd" id="1_fotac"]
[ext_resource type="Shader" path="res://Shaders/spawn.gdshader" id="2_jrhrx"]
[ext_resource type="Texture2D" uid="uid://cdfdylp2rpeyy" path="res://Assets/Enemy/Alien-Sheet.png" id="3_ttfkr"]
[ext_resource type="AudioStream" uid="uid://wj6jbx6v42xb" path="res://audio/Enemy/human_die.wav" id="5_ce8aq"]
[ext_resource type="Texture2D" uid="uid://2pappgmugtue" path="res://Assets/Effects/square.png" id="6_mn86h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8fwc"]
resource_local_to_scene = true
shader = ExtResource("2_jrhrx")
shader_parameter/progress = 0.0
shader_parameter/noise_desnity = 100.0
shader_parameter/beam_size = 0.15
shader_parameter/color = Vector4(0, 1.02, 1.2, 1)

[sub_resource type="Animation" id="Animation_nn1ji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:shooot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8n32i"]
resource_name = "p_idle"
length = 1.00005
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttfkr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_7hmdr"]
resource_name = "p_run"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttfkr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_q5j0i"]
resource_name = "jump"
length = 1.73334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ttfkr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333, 1.6, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11, 12, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:shooot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.333333, 0.666667, 1, 1.33333, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnpm0"]
_data = {
"RESET": SubResource("Animation_nn1ji"),
"jump": SubResource("Animation_q5j0i"),
"p_idle": SubResource("Animation_8n32i"),
"p_run": SubResource("Animation_7hmdr")
}

[sub_resource type="Animation" id="Animation_8vms6"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:spawn_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("sound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ce8aq")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_klfcq"]
resource_name = "hit"
length = 0.0666683
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hit:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0500001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ge7c1"]
_data = {
"die": SubResource("Animation_8vms6"),
"hit": SubResource("Animation_klfcq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyvi7"]
size = Vector2(10, 8.125)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_moybg"]
resource_local_to_scene = true
shader = ExtResource("2_jrhrx")
shader_parameter/progress = 0.0
shader_parameter/noise_desnity = 60.0
shader_parameter/beam_size = null
shader_parameter/color = Vector4(0, 1.02, 1.2, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_isxod"]
radius = 7.0
height = 24.0

[node name="Peasant" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
y_sort_enabled = true
collision_layer = 0
collision_mask = 69
script = ExtResource("1_fotac")
approach_dist = 300.0
run_dist = 60.0
gold_drop = Vector2(8, 10)
move_speed = 75.0
health = 16.0
damage = 1.0
rarity = 1
reload = Vector2(4, 6)
attack_type = "Slime"
shots = Vector2(3, 6)
delay = 0.05
spread = 360.0

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 513
y_sort_enabled = true
material = SubResource("ShaderMaterial_r8fwc")
position = Vector2(1, -4)
texture = ExtResource("3_ttfkr")
offset = Vector2(0, -5)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hnpm0")
}

[node name="hit_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ge7c1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_dyvi7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
path_max_distance = 1000.0
debug_use_custom = true
debug_path_custom_color = Color(10, 1, 1, 1)

[node name="Nav_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Idle_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Gun" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_moybg")
position = Vector2(1, -7)

[node name="Muzzel" type="Marker2D" parent="Gun"]

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(1, -9)
collision_layer = 4
collision_mask = 4
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Enemy"]]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_isxod")

[node name="collision_damage" type="Area2D" parent="."]
position = Vector2(1, -9)
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_damage" groups=["Enemy"]]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_isxod")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(1, -9)
target_position = Vector2(50, 0)
collision_mask = 2

[node name="Hit" type="PointLight2D" parent="."]
light_mask = 512
position = Vector2(0.500001, -8)
scale = Vector2(0.78125, 0.962837)
color = Color(3, 0, 0, 1)
range_item_cull_mask = 512
texture = ExtResource("6_mn86h")

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ce8aq")
pitch_scale = 1.18

[connection signal="timeout" from="Nav_timer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="area_entered" from="collision_damage" to="." method="_on_collision_damage_area_entered"]
[connection signal="finished" from="sound" to="." method="_on_sound_finished"]
